src-ken&y/objects/Hierarchy__c.object
<CustomObject>
    <customHelpPage>HelpHierarchy</customHelpPage>
    <description>Customer and Product reporting hierarchies</description>
    <fields>
        <fullName>CodeId__c</fullName>
        <formula>CASESAFEID( LEFT(Code__c,15) )</formula>
        <label>CodeId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <description>external id used for data loads and integration</description>
        <label>Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Bool__c</fullName>
        <description>Records are current if the start date &lt;= today and end &gt;= today, or no end date</description>
        <formula>AND( Start_Date__c &lt;=  TODAY(),OR( End_Date__c &gt;= TODAY(),  ISBLANK(End_Date__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Records are current if the start date &lt;= today and end &gt;= today, or no end date</inlineHelpText>
        <label>Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_DateTime__c</fullName>
        <label>End DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Period_Date__c</fullName>
        <formula>End_Period__r.Period_End__c</formula>
        <label>End Period Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End Period</label>
        <referenceTo>Period__c</referenceTo>
        <relationshipLabel>Hierarchies (End Period)</relationshipLabel>
        <relationshipName>Hierarchies1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Total Company</fullName>
                </value>
                <value>
                    <fullName>Company</fullName>
                </value>
                <value>
                    <fullName>Area</fullName>
                </value>
                <value>
                    <fullName>Zone</fullName>
                </value>
                <value>
                    <fullName>Region</fullName>
                </value>
                <value>
                    <fullName>Channel</fullName>
                </value>
                <value>
                    <fullName>Sub Channel</fullName>
                </value>
                <value>
                    <fullName>Market</fullName>
                </value>
                <value>
                    <fullName>Case UPC</fullName>
                </value>
                <value>
                    <fullName>PromoGroup</fullName>
                </value>
                <value>
                    <fullName>Planning Customer</fullName>
                </value>
                <value>
                    <fullName>Reporting Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ParentCodeId__c</fullName>
        <formula>CASESAFEID( LEFT(Parent_Code__c,15) )</formula>
        <label>ParentCodeId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Code__c</fullName>
        <description>The code of the parent of this record</description>
        <label>Parent Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Which Hierarchy object is this a member of</description>
        <label>Parent</label>
        <referenceTo>Hierarchy__c</referenceTo>
        <relationshipLabel>Hierarchy</relationshipLabel>
        <relationshipName>Hierarchy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Path__c</fullName>
        <description>The path from my top hierarchy record down to myself separated by &apos;|&apos; so that we can report on products or customers by filtering in reports</description>
        <inlineHelpText>The path from the top of the hierarchy down to this record. Each level in the hierarchy is separated by &apos;|&apos; . The custom button &apos;Set Hierarchy Path&apos; updates the data automatically.</inlineHelpText>
        <label>Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricebook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Pricebook field will be used as part of customer hierarchy. When a pricebook is associated with a customer hierarchy, the corresponding price book will be used to determine the price of a product for a customer under the hierarchy.</description>
        <label>Pricebook</label>
        <referenceTo>Pricebook__c</referenceTo>
        <relationshipLabel>Hierarchies</relationshipLabel>
        <relationshipName>Hierarchies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Key__c</fullName>
        <description>used for uploading, is a combo of code + date</description>
        <externalId>true</externalId>
        <label>Primary Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <description>used to specify a sort order for this record</description>
        <label>Sequence Number</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_DateTime__c</fullName>
        <label>Start DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Period_Date__c</fullName>
        <formula>Start_Period__r.Period_Start__c</formula>
        <label>Start Period Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Start Period</label>
        <referenceTo>Period__c</referenceTo>
        <relationshipLabel>Hierarchies</relationshipLabel>
        <relationshipName>Hierarchies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Top_Parent_Code__c</fullName>
        <description>The code of the topmost parent in this hierarchy, used to optimize the number of queries</description>
        <inlineHelpText>The code that identifies the topmost parent in the selected hierarchy.</inlineHelpText>
        <label>Top Parent Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type indicates which hierarchy this record supports</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Organization</fullName>
                </value>
                <value>
                    <fullName>National Account</fullName>
                </value>
                <value>
                    <fullName>Financial Hierarchy</fullName>
                </value>
                <value>
                    <fullName>Product Hierarchy</fullName>
                </value>
                <value>
                    <fullName>Segment Hierarchy</fullName>
                </value>
                <value>
                	<fullName>Customer Hierarchy</fullName>
            	</value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Hierarchy</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Parent_Code__c</columns>
        <columns>Description__c</columns>
        <columns>End_Date__c</columns>
        <columns>Level__c</columns>
        <columns>Parent__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All2</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Parent__c</columns>
        <columns>Code__c</columns>
        <columns>Parent_Code__c</columns>
        <columns>End_Date__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Sequence_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Hierarchy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hierarchies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Invalid_Codes</fullName>
        <active>true</active>
        <description>Code and Parent Code must not be identical</description>
        <errorConditionFormula>Code__c  =  Parent_Code__c</errorConditionFormula>
        <errorMessage>Code and Parent Code must not be identical</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Segment_Hierarchy_Period_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Type__c , &apos;Segment Hierarchy&apos;) &amp;&amp;   ISBLANK(Start_Period__c)</errorConditionFormula>
        <errorMessage>Segment Hierarchy must have starting period.</errorMessage>
    </validationRules>
</CustomObject>